# batchivo

./: .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT_SESSION.md  LICENSE  Makefile  PRE-COMMIT.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  TESTING_SUMMARY.md  deploy.sh  docker-compose.yml  issues.jsonl
.beads/: .gitignore  (+4 more)
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.ci  Dockerfile.lock-update  README.md  coverage.xml  package-lock.json  package.json  pyproject.toml  reset_password.py
backend/alembic/: env.py
backend/alembic/versions/: 0317173adc09_merge_branches.py  03fcf3292f37_fix_production_runs_missing_columns.py  07badcd78841_add_tenant_type_column.py  1d212c2984fe_merge_webhook_currency_and_file_refs.py  377444db97ce_add_product_images_table.py  43cc1df327c1_add_printers_table.py  60aba13508b8_fix_product_images_missing_columns.py  7399942463dd_create_email_verification_tokens_table.py  79f717599971_add_designers_table.py  86af18fc13c2_add_multi_plate_support_printers_.py  8a963ea7f73a_merge_model_files_branch.py  8c3c671816d9_create_rls_policies.py  8cee3531b555_add_batch_tracking_fields_to_spools.py  8e9eb6466afa_add_webhook_events_tables.py  9521683a2066_initial_schema_tenants_users_material_.py  DATA_filament_type_migration.py  MERGE_filament_type_heads.py  a0b1c2d3e4f5_add_3d_printing_fields_to_product_variants.py  a1b2c3d4e5f6_add_bambu_printer_connection_tables.py  a1b2c3d4e5f6_add_multichannel_fields_to_products.py  a1b2c3d4e5f6_add_webhook_events_tables.py  a1b2c3d4e5f6_tenant_settings_json_to_jsonb.py  a4b5c6d7e8f9_add_composite_indexes.py  a4b5c6d7e8f9_add_index_orders_customer_email.py  a4b5c6d7e8f9_add_print_queue_tables.py  a4b5c6d7e8f9_add_tenant_currency_fields.py  a8d3e5f7g9h1_add_production_runs_tables.py  aab1994dc0bc_add_categories_table.py  add_is_dragon_01_add_is_dragon_to_products.py  b1c2d3e4f5g6_add_multichannel_fields_to_products.py  b2c3d4e5f6g7_add_customers.py  b4f5c6d7e8f9_migrate_to_jwt_auth.py  b5c6d7e8f9a0_add_composite_functional_index_orders_customer.py  b5c6d7e8f9a0_add_index_orders_customer_email.py  b5c6d7e8f9g0_add_platform_admin_audit_logs.py  b624b63926e9_add_designer_id_to_products.py  c384baaa92e4_add_tenant_currency_fields.py  c3d4e5f6g7h8_add_reviews.py  c5d6e7f8g9h0_add_password_reset_fields.py  c6d7e8f9a0b1_add_composite_indexes.py  (+59 more)
backend/app/: config.py  database.py  main.py
backend/app/auth/: __init__.py  customer_dependencies.py  dependencies.py  middleware.py  password.py
backend/app/core/: encryption.py  rate_limit.py  security.py
backend/app/middleware/: __init__.py  metrics.py  security.py
backend/app/models/: __init__.py  ams_slot_mapping.py  audit_log.py  base.py  category.py  consumable.py  customer.py  designer.py  discount.py  email_verification.py  external_listing.py  filament_type.py  inventory_transaction.py  material.py  model.py  model_component.py  model_file.py  model_material.py  model_printer_config.py  order.py  page.py  payment_log.py  platform_admin.py  print_job.py  printer.py  printer_connection.py  product.py  product_component.py  product_image.py  product_model.py  product_pricing.py  product_variant.py  production_run.py  production_run_plate.py  return_request.py  review.py  sales_channel.py  spool.py  spoolmandb.py  tenant.py  (+4 more)
backend/app/modules/: __init__.py  base.py  registry.py
backend/app/observability/: metrics.py  sentry.py  tracing.py
backend/app/schemas/: __init__.py  ams_slot_mapping.py  audit.py  auth.py  category.py  consumable.py  customer.py  designer.py  discount.py  external_listing.py  filament_type.py  forecasting.py  inventory_transaction.py  material.py  model.py  model_file.py  model_printer_config.py  onboarding.py  page.py  payment.py  platform_admin.py  print_queue.py  printer.py  printer_connection.py  product.py  product_image.py  production_run.py  production_run_plate.py  return_request.py  review.py  sales_channel.py  shipping.py  shop.py  spool.py  spoolmandb.py  tenant_settings.py  webhook.py
backend/scripts/: backfill_cost_analysis.py  diagnose_model_file_upload.py  import_products.py  migrate_mystmereforge_settings.py  product_import_template.csv  seed_materials.py  seed_mystmereforge.py  seed_staging.py  set_custom_domain.py
backend/tests/: TEST_COVERAGE.md  TEST_PLAN_PHASE_3_5.md  __init__.py  conftest.py  integration_test.sh  test_auth_flow.py
(+853 files in other folders)
