[tool.poetry]
name = "nozzly-backend"
version = "0.1.0"
description = "Nozzly 3D Print Business Management - Backend API"
authors = ["Jonathan <jonathan@techize.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.124.4"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
alembic = "^1.13.0"
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.0"}
asyncpg = "^0.31.0"
redis = "^5.0.0"
authlib = "^1.3.0"
PyJWT = "^2.9.0"
bcrypt = "^4.0.0"
httpx = "^0.26.0"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
opentelemetry-instrumentation-sqlalchemy = "^0.43b0"
opentelemetry-exporter-otlp = "^1.22.0"
opentelemetry-exporter-prometheus = "^0.43b0"
celery = {extras = ["redis"], version = "^5.3.0"}
qrcode = {extras = ["pil"], version = "^7.4.0"}
pillow = "^12.0.0"
python-multipart = "^0.0.18"
aiosqlite = "^0.21.0"
pyyaml = "^6.0.0"
squareup = "^39.0.0"
slowapi = "^0.1.9"
starlette = "0.49.1"
boto3 = "^1.35.0"
paho-mqtt = "^2.1.0"
resend = "^2.19.0"
dnspython = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
ruff = "^0.8.4"
mypy = "^1.8.0"
httpx = "^0.26.0"
fakeredis = "^2.32.1"
moto = {extras = ["s3"], version = "^5.0.0"}
pytest-xdist = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# F821: Undefined name - SQLAlchemy uses string annotations for relationships
# E402: Module level import not at top - intentional for conditional imports
ignore = ["F821", "E402"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
